block-work & block-description

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             </div>
         </div>
         <div class="header-info__sliders">
-            <p class="header-info__sliders--name">Комплексный подход <br>к проектированию <br>и реализации пространства</p>
+            <p class="header-info__sliders--name">Комплексный подход <br>к проектированию <br>и реализации пространства
+            </p>
             <div class="header-info__sliders--btn">
                 <button></button>
                 <button></button>
@@ -56,7 +57,7 @@
     </header>
     <main>
         <div class="container">
-            <p class="block-work__title">Направления работы</p>
+            <p class="block__title">Направления работы</p>
             <div class="block-work">
                 <div class="block-work__one">
                     <p class="block-work__one--number">01</p>
@@ -86,6 +87,45 @@
                         <p class="block-work__one--description">Эксплутационная компания CitySpace</p>
                     </div>
                 </div>
+            </div>
+            <div class="block-description">
+                <div class="block-description__square">
+                    <p class="block-description__square--number">1 510 000 м²</p>
+                    <p class="block-description__square--description">Площадь проектов в строительстве и Fit-Out</p>
+                </div>
+                <p class="block-description__info"> Холдинг City Space занимается капительным <br>строительством,
+                    проектированием и fit-out. <br>На данный момент реализовано более 200 <br>проектов общей площадью 1
+                    510 000 м² в области <br>коммерческой и индустриальной недвижимости.</p>
+            </div>
+            <hr class="line">
+            <div class="block-info">
+                <div class="block-info__description">
+                    <p class="block__title">Fit-Out</p>
+                    <div class="block-info__description--project">
+                        <p class="block-info__description--project-number">1 000 000 м<sup>2</sup></p>
+                        <p class="block-info__description--project-realization">реализованных проектов</p>
+                    </div>
+                    <p class="block-info__description--content">Опыт компании позволяет выработать оптимальный пакет
+                        решений для реализации офисного проекта любой сложности в минимальные сроки. Услугами компании
+                        пользуются крупнейшие российские и международные компании, среди которых Raiffeisenbank,
+                        Philips, Samsung, «Газпром экспорт», «Альфа-Банк», «Новатэк» и другие.</p>
+                </div>
+                <img src="./src/img/img1.png" alt="">
+                <img src="./src/img/img2.png" alt="">
+                <div class="block-info__description">
+                    <p class="block__title">Проектирование</p>
+                    <div class="block-info__description--project">
+                        <p class="block-info__description--project-number">510 000 м<sup>2</sup></p>
+                        <p class="block-info__description--project-realization">реализованных проектов</p>
+                    </div>
+                    <p class="block-info__description--content">Cтроим уникальные высокотехнологичные проекты от самых
+                        современных бизнес-центров до элитных жилых комплексов и школ мирового уровня. Компания
+                        выполняет полный комплекс услуг: начиная с создания концепции проекта и оформления рабочей
+                        документации, заканчивая вводом объекта в эксплуатацию.</p>
+                </div>
+            </div>
+            <div class="block-company">
+                
             </div>
         </div>
     </main>
