--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
             <div class="block-description">
                 <div class="block-description__square">
-                    <p class="block-description__square--number">1 510 000 м²</p>
+                    <p class="big-text">1 510 000 м²</p>
                     <p class="block-description__square--description">Площадь проектов в строительстве и Fit-Out</p>
                 </div>
                 <p class="block-description__info"> Холдинг City Space занимается капительным <br>строительством,
@@ -125,7 +125,90 @@
                 </div>
             </div>
             <div class="block-company">
-                
+                <div class="block-company__info">
+                    <p class="block__title">О компании</p>
+                    <p class="block-company__info--description">City Space заслуженно считается одним из лидеров
+                        строительного рынка на территории России. City Space предлагает услуги Генерального подряда и
+                        комплексные решения по реализации архитектурного и инженерного проектирования, капитального
+                        строительства, отделке <br>и инженерного оснащения общественных, офисных и жилых помещений. По
+                        общим
+                        подсчетам Компанией сдано <br>в эксплуатацию уже более одного миллиона кв метров. Мощности и
+                        ресурсы
+                        компании позволяют вести работы <br>на объектах общей площадью до 70 000 м² единовременно.</p>
+                </div>
+                <div class="block-company__picture">
+                    <div class="block-company__picture--info">
+                        <img src="./src/img/block1/image_5.png" alt="Avito">
+                        <img src="./src/img/block1/image_6.png" alt="gsk">
+                        <img src="./src/img/block1/image_7.png" alt="Airlines">
+                        <img src="./src/img/block1/image_8.png" alt="SAMSUNG">
+                        <img src="./src/img/block1/image_9.png" alt="McKinseyCompany">
+                        <img src="./src/img/block1/image_10.png" alt="epam">
+                    </div>
+                    <div class="block-company__picture--info">
+                        <img src="./src/img/block2/image_5.png" alt="AMGEN">
+                        <img src="./src/img/block2/image_6.png" alt="Schneider">
+                        <img src="./src/img/block2/image_7.png" alt="RaiffeisenBANK">
+                        <img src="./src/img/block2/image_8.png" alt="DANONE">
+                        <img src="./src/img/block2/image_9.png" alt="Skolkovo">
+                        <img src="./src/img/block2/image_10.png" alt="Nilon">
+                    </div>
+                    <div class="block-company__picture--info">
+                        <img src="./src/img/block3/image_5.png" alt="align">
+                        <img src="./src/img/block3/image_6.png" alt="Microsoft">
+                        <img src="./src/img/block3/image_7.png" alt="ЧТПЗ">
+                        <img src="./src/img/block3/image_8.png" alt="DAICHI">
+                        <img src="./src/img/block3/image_9.png" alt="NVIDIA">
+                        <img src="./src/img/block3/image_10.png" alt="LG">
+                    </div>
+                    <div class="block-company__picture--info">
+                        <img src="./src/img/block4/image_5.png" alt="otto group">
+                        <img src="./src/img/block4/image_6.png" alt="ИСТОК">
+                        <img src="./src/img/block4/image_7.png" alt="SANOFI">
+                        <img src="./src/img/block4/image_8.png" alt="SPAR">
+                        <img src="./src/img/block4/image_9.png" alt="Sawatzky">
+                        <img src="./src/img/block4/image_10.png" alt="SAB">
+                    </div>
+                    <div class="block-company__picture--info1">
+                        <img src="./src/img/block5/image_5.png" alt="otto group">
+                        <img src="./src/img/block5/image_6.png" alt="ИСТОК">
+                        <img src="./src/img/block5/image_7.png" alt="SANOFI">
+                        <img src="./src/img/block5/image_8.png" alt="SPAR">
+                        <img src="./src/img/block5/image_9.png" alt="Sawatzky">
+                        <img src="./src/img/block5/image_10.png" alt="SAB">
+                    </div>
+                    <div class="block-company__picture--info2">
+                        <img src="./src/img/block6/image_5.png" alt="otto group">
+                        <img src="./src/img/block6/image_6.png" alt="ИСТОК">
+                        <img src="./src/img/block6/image_7.png" alt="SANOFI">
+                        <img src="./src/img/block6/image_8.png" alt="SPAR">
+                        <img src="./src/img/block6/image_9.png" alt="Sawatzky">
+                        <img src="./src/img/block6/image_10.png" alt="SAB">
+                    </div>
+                    <div class="block-company__picture--info3">
+                        <img src="./src/img/block7/image_5.png" alt="otto group">
+                        <img src="./src/img/block7/image_6.png" alt="ИСТОК">
+                        <img src="./src/img/block7/image_7.png" alt="SANOFI">
+                        <img src="./src/img/block7/image_8.png" alt="SPAR">
+                        <img src="./src/img/block7/image_9.png" alt="Sawatzky">
+                        <img src="./src/img/block7/image_10.png" alt="SAB">
+                    </div>
+                    <div class="block-company__picture--info4">
+                        <img src="./src/img/block8/image_5.png" alt="otto group">
+                        <img src="./src/img/block8/image_6.png" alt="ИСТОК">
+                        <img src="./src/img/block8/image_7.png" alt="SANOFI">
+                        <img src="./src/img/block8/image_8.png" alt="SPAR">
+                        <img src="./src/img/block8/image_9.png" alt="Sawatzky">
+                        <img src="./src/img/block8/image_10.png" alt="SAB">
+                    </div>
+                </div>
+            </div>
+            <div class="block-earth">
+                    <p class="big-text">Более 200 проектов</p>
+                    <p class="block-earth__description">РЕАЛИЗОВАННО В РОССИИ И ЗА РУБЕЖОМ</p>
+                <div class="block-services">
+                    <p>Усоуги</p>
+                </div>
             </div>
         </div>
     </main>
