--- a/index.html
+++ b/index.html
@@ -204,10 +204,233 @@
                 </div>
             </div>
             <div class="block-earth">
+                <div class="block-earth__realization">
                     <p class="big-text">Более 200 проектов</p>
-                    <p class="block-earth__description">РЕАЛИЗОВАННО В РОССИИ И ЗА РУБЕЖОМ</p>
-                <div class="block-services">
-                    <p>Усоуги</p>
+                    <p class="block-earth__realization--description">РЕАЛИЗОВАННО В РОССИИ И ЗА РУБЕЖОМ</p>
+                </div>
+                <p class="block__title">Услуги</p>
+                <div class="block-earth__services">
+                    <div class="services__info">
+                        <img src="./src/img/block-services/img_1.png" alt="picture">
+                        <p class="services__info--name">Проектирование</p>
+                        <p class="services__info--description">Полный комплекс услуг по архитектурному <br>и
+                            инженерному проектированию.</p>
+                    </div>
+                    <div class="services__info">
+                        <img src="./src/img/block-services/img_2.png" alt="picture">
+                        <p class="services__info--name">Строительные работы</p>
+                        <p class="services__info--description"> Строительно-монтажные работы <br>и отделочные работы
+                            любого уровня.</p>
+                    </div>
+                    <div class="services__info">
+                        <img src="./src/img/block-services/img_3.png" alt="picture">
+                        <p class="services__info--name">Генеральный подряд</p>
+                        <p class="services__info--description">Принимаем на себя реализацию проекта <br>от строительных
+                            работ до согласования.</p>
+                    </div>
+                    <div class="services__info">
+                        <img src="./src/img/block-services/img_4.png" alt="picture">
+                        <p class="services__info--name">Поставка оборудования</p>
+                        <p class="services__info--description">Отдел логистики и снабжения, который сокращает сроки
+                            реализации проекта</p>
+                    </div>
+                    <div class="services__info">
+                        <img src="./src/img/block-services/img_5.png" alt="picture">
+                        <p class="services__info--name">Комплектация и мебелирование</p>
+                        <p class="services__info--description">Полный комплекс услуг по архитектурному <br>и инженерному
+                            проектированию.</p>
+                    </div>
+                    <div class="services__info">
+                        <img src="./src/img/block-services/img_6.png" alt="picture">
+                        <p class="services__info--name">Эксплуатация</p>
+                        <p class="services__info--description"> Полный комплекс услуг по архитектурному <br>и
+                            инженерному проектированию</p>
+                    </div>
+                </div>
+            </div>
+            <div class="block-benefits">
+                <div class="block-benefits__left">
+                    <p class="block__title indent-bottom">Наши преимущества</p>
+                    <div class="block-benefits__left--description">
+                        <p>Детализированная финансовая отчетность каждый
+                            день: текущие затраты и будущие затраты.</p>
+                    </div>
+                    <div class="block-benefits__left--description">
+                        <p>Мы единственные в России партнеры KNAUF по
+                            оценке компетенций мастеров.</p>
+                    </div>
+                    <div class="block-benefits__left--description">
+                        <p>Официальные партнеры AFI DEVELOPMENT по ремонту
+                            квартир</p>
+                    </div>
+                    <div class="block-benefits__left--description">
+                        <p>Инновационный метод управления ремонтами по методу SCRUM</p>
+                    </div>
+                    <div class="block-benefits__left--description">
+                        <p>Работаем с механизированной штукатуркой и стяжкой</p>
+                    </div>
+                    <div class="block-benefits__left--description">
+                        <p>Компания построена по функциональным стандартам PMI (USA)</p>
+                    </div>
+                    <div class="block-benefits__left--description">
+                        <p>Готовы показать любой объект в работе для оценки качества</p>
+                    </div>
+                    <div class="block-benefits__left--description">
+                        <p>100% выполнение требований регламентов ГОСТ, СНиП</p>
+                    </div>
+                    <div class="block-benefits__left--description">
+                        <p>Руководство готово в любой момент встретиться с заказчиком</p>
+                    </div>
+                    <div class="block-benefits__left--description">
+                        <p>Мастера аттестованы Knauf, Rehau, Tikkurila и др.</p>
+                    </div>
+                    <div class="block-benefits__left--description">
+                        <p>Электрики с допусками cертифицированы Schneider Electri</p>
+                    </div>
+                    <div class="block-benefits__left--description">
+                        <p>Все мастера – граждане РФ. Проверены на полиграфе. Подтвержденное портфолио.</p>
+                    </div>
+                </div>
+                <img class="block-benefits__right" src="./src/img/benefits.png" alt="picture">
+            </div>
+            <div class="block-project">
+                <div class="block-project__title">
+                    <p class="block__title">Проекты</p>
+                    <a class="block-project__title--all-project">Все проекты</a>
+                </div>
+                <div class="block-project__description">
+                    <div class="project-info">
+                        <img src="./src/img/block-project/project_1.png" alt="Центральный офис группы НЛМК">
+                        <div class="projet-info__description">
+                            <p class="projet-info__description--name">Центральный офис группы НЛМК</p>
+                            <p class="projet-info__description--year">2020</p>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <img src="./src/img/block-project/project_2.png" alt="Отдел продаж S7 Airlines">
+                        <div class="projet-info__description">
+                            <p class="projet-info__description--name">Отдел продаж S7 Airlines</p>
+                            <p class="projet-info__description--year">2020</p>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <img src="./src/img/block-project/project_3.png" alt="JetBrains Санкт-Петербург">
+                        <div class="projet-info__description">
+                            <p class="projet-info__description--name">JetBrains Санкт-Петербург</p>
+                            <p class="projet-info__description--year">2019</p>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <img src="./src/img/block-project/project_4.png" alt="CB Richard Ellis">
+                        <div class="projet-info__description">
+                            <p class="projet-info__description--name">CB Richard Ellis</p>
+                            <p class="projet-info__description--year">2018</p>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <img src="./src/img/block-project/project_5.png" alt="Avito">
+                        <div class="projet-info__description">
+                            <p class="projet-info__description--name">Avito</p>
+                            <p class="projet-info__description--year">2017</p>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <img src="./src/img/block-project/project_6.png" alt="Avito Казань">
+                        <div class="projet-info__description">
+                            <p class="projet-info__description--name">Avito Казань</p>
+                            <p class="projet-info__description--year">2020</p>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <img src="./src/img/block-project/project_7.png" alt="Офис MyCom в Москве">
+                        <div class="projet-info__description">
+                            <p class="projet-info__description--name">Офис MyCom в Москве</p>
+                            <p class="projet-info__description--year">2019</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="block-team">
+                <p class="block__title">Команда City Space</p>
+                <div class="block-team__description">
+                    <div class="block-team__description--main">
+                        <div class="block-team__info">
+                            <p class="block-team__info--name">Сергей Борисов</p>
+                            <p class="block-team__info--position">CEO, основатель</p>
+                        </div>
+                        <img class="block-team__photo-1" src="./src/img/block-team/team_1.png" alt="Сергей Борисов">
+                    </div>
+                    <div class="block-team__description--main">
+                        <div class="block-team__info">
+                            <p class="block-team__info--name">Елена Горбунова</p>
+                            <p class="block-team__info--position">Соучередитель</p>
+                        </div>
+                        <img class="block-team__photo-2" src="./src/img/block-team/team_2.png" alt="Елена Горбунова">
+                    </div>
+                    <div class="block-team__description--main">
+                        <div class="block-team__info">
+                            <p class="block-team__info--name">Сергей Борисов</p>
+                            <p class="block-team__info--position">Соучередитель</p>
+                        </div>
+                        <img class="block-team__photo-3" src="./src/img/block-team/team_3.png" alt="Сергей Борисов">
+                    </div>
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_4.png" alt="фотография">
+                   </div>
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_5.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_6.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_7.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_8.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_9.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_10.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_11.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_12.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_13.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_14.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_15.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_16.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_17.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_18.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_19.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others">
+                    <img  src="./src/img/block-team/team_20.png" alt="фотография">
+                   </div> 
+                   <div class="block-team__description--others-last">
+                        <div class="block-team__others-last--info">
+                            <p class="block-team__others-last--name">Тимур Гариев</p>
+                            <p class="block-team__others-last--position">Главный инженер проектов</p>
+                        </div>
+                   </div> 
                 </div>
             </div>
         </div>
