--- a/index.html
+++ b/index.html
@@ -374,67 +374,172 @@
                         </div>
                         <img class="block-team__photo-3" src="./src/img/block-team/team_3.png" alt="Сергей Борисов">
                     </div>
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_4.png" alt="фотография">
-                   </div>
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_5.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_6.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_7.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_8.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_9.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_10.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_11.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_12.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_13.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_14.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_15.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_16.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_17.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_18.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_19.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others">
-                    <img  src="./src/img/block-team/team_20.png" alt="фотография">
-                   </div> 
-                   <div class="block-team__description--others-last">
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_4.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_5.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_6.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_7.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_8.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_9.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_10.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_11.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_12.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_13.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_14.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_15.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_16.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_17.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_18.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_19.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others">
+                        <img src="./src/img/block-team/team_20.png" alt="фотография">
+                    </div>
+                    <div class="block-team__description--others-last">
                         <div class="block-team__others-last--info">
                             <p class="block-team__others-last--name">Тимур Гариев</p>
                             <p class="block-team__others-last--position">Главный инженер проектов</p>
                         </div>
-                   </div> 
+                    </div>
                 </div>
+            </div>
+            <div class="block-tour">
+                <div class="block-tour__title">
+                    <p class="block__title">Проведем экскурсию <br>по реализованным проектам</p>
+                    <div class="block-tour__title--info">
+                        <p class="block-tour__title--number">350</p>
+                        <p class="block-tour__title--description">более 350 объектов <br>уже готовы к показу</p>
+                    </div>
+                </div>
+                <hr class="small-line--green">
+                <p class="block-tour__description">Не все клиенты готовы публиковать свои данные, и мы с большим
+                    уважением относимся
+                    <br>к их конфиденциальности. Однако отзывы и рекомендации для нас очень важны! Поэтому <br>нашим
+                    потенциальным клиентам мы даем уникальную возможность встретиться <br>непосредственно с
+                    представителями
+                    наших заказчиков на территории готовых объектов.
+                </p>
+            </div>
+        </div>
+        <div class="block-sliders">
+            <div class="block-sliders__card">
+                <img src="./src/img/block-sliders/card_2.png" alt="">
+                <p class="block-sliders__card--description">Центр перспективных <br>управленческих решений</p>
+            </div>
+            <div class="block-sliders__card">
+                <img src="./src/img/block-sliders/card_3.png" alt="">
+                <p class="block-sliders__card--description">Шоу-рум и учебный центр <br>компании Sono Russ</p>
+            </div>
+            <div class="block-sliders__card">
+                <img src="./src/img/block-sliders/card_4.png" alt="">
+                <p class="block-sliders__card--description">Колл-центр компании МТС <br>в Ульяновске</p>
+            </div>
+            <div class="block-sliders__card">
+                <img src="./src/img/block-sliders/card_5.png" alt="">
+                <p class="block-sliders__card--description">Офис социологических <br>исследований</p>
+            </div>
+            <div class="block-sliders__card">
+                <img src="./src/img/block-sliders/card_6.png" alt="">
+                <p class="block-sliders__card--description">Центр перспективных <br>управленческих решений</p>
+            </div>
+            <div class="block-sliders__card">
+                <img src="./src/img/block-sliders/card_7.png" alt="">
+                <p class="block-sliders__card--description">Колл-центр компании МТС<br>в Ульяновске</p>
             </div>
         </div>
     </main>
+    <footer>
+        <div class="container">
+            <div class="block-contact">
+                <div class="block-contact__left">
+                    <p class="block__title">Контакты</p>
+                    <div class="block-contact__info">
+                        <div class="block-contact__info--name">
+                            <p>Телефон</p>
+                            <p>Почта</p>
+                            <p>Офис</p>
+                        </div>
+                        <div class="block-contact__info--description">
+                            <p class="header-info__contact-info--contact">+7 (499) 283-19-13</p>
+                            <p class="header-info__contact-info--contact">office@cityspace.ru</p>
+                            <p>Лужнецкая набережная, 2/4, строение 17</p>
+                        </div>
+                    </div>
+                    <iframe class="iframe"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2247.577865395427!2d37.571412773375094!3d55.71370906826007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54b78deae21f5%3A0x404d16d1ee9618cb!2z0JvRg9C20L3QtdGG0LrQsNGPINC90LDQsS4sIDIvNCDRgdGC0YDQvtC10L3QuNC1IDE3LCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjywgMTE5Mjcw!5e0!3m2!1sru!2s!4v1653139486175!5m2!1sru!2s"
+                        width="592" height="321" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="block-contact__right">
+                    <div class="block-contact__right--description">
+                        <p class="block-contact__right--title">Оставьте заявку, чтобы обсудить ваш проект</p>
+                        <p class="block-contact__right--info">В самое ближайшее время менеджер свяжется с вами и
+                            проконсультирует по деталям проекта</p>
+                    </div>
+                    <div class="block-contact__right--input">
+                        <input class="block-contact__right--name" type="text" placeholder="Как к вам обращаться?">
+                        <input class="block-contact__right--phone" type="phone" placeholder="+7 ___ ___-__-__">
+                        <textarea name="message" class="block-contact__right--message"
+                            placeholder="Сообщение (не обязательно)"></textarea>
+                        <button class="request__button">Оставить заявку</button>
+                    </div>
+                </div>
+            </div>
+            <hr class="line">
+            <div class="block-footer__nav">
+                <div class="header-info__logo">
+                    <img src="/src/img/logo.svg" alt="logo">
+                    <h1>City</h1>
+                    <h1 class="header-info__logo--space">Space</h1>
+                </div>
+                <nav>
+                    <ul class="footer-info__menu">
+                        <a href="">Контакты</a>
+                        <a href="">Партнерам</a>
+                        <a href="">Портфолио</a>
+                        <a href="">Услуги</a>
+                        <a href="">Почему мы</a>
+                        <a href="">Награды</a>
+                        <a href="">Для прессы</a>
+                    </ul>
+                </nav>
+                <div class="footer-info__copyright">
+                    <p>© 2013-2021 <br>
+                        COPYRIGHT CITY SPACE</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
